# RetouchMeSchedulerScript

./: .gitignore  README.md  auth.py  config.py  logger.py  monitor.py  pyproject.toml  test.py  tg_bot.py  tttt.py
core/: driver.py  scraper.py  utils.py
dev_tools/: config.py  extracted.html  html_normalizer.py  main.py  manual_testing.py  mhtml_to_html.py  normalized.html  page.mhtml  test_main.py
script/: config.py  main.py
