[project]
package-mode = false
name = "retouchmeschedulerscript"
version = "0.1.0"
description = ""
authors = [
    {name = "lian",email = "xdxdxd4305@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4 (>=0.0.2,<0.0.3)",
    "selenium (>=4.34.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
